# ms-ai-translate

./: README.md  pyproject.toml
src/ms_ai_translate/: main.py
