[project]
name = "ms-ai-translate"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kaubarros-24", email = "martinsbarroskaua@gmail.com"},
]
dependencies = ["transformers>=4.46.2", "torch>=2.5.1", "fastapi>=0.115.5", "uvicorn>=0.32.0", "langdetect>=1.0.9", "sentencepiece>=0.2.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
pikachu = "uvicorn src.ms_ai_translate.main:app --port 8090"
